update README and EXAMPLE